# AIStoryWriter

./: README.md  pyproject.toml  run.py
backend/: main.py  requirements.txt
backend/app/: __init__.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: story_models.py
backend/app/services/: ollama_service.py  story_workflow_service.py
frontend/: index.html
frontend/css/: main.css
frontend/js/: api.js  main.js  settingsPanel.js  statusBar.js  storyDisplay.js  storyGenerator.js  storyWorkflow.js
